# universal-webhook

./: .gitignore  Cargo.toml  README.md
src/: main.rs  router.rs
src/receiver/: slack.rs
src/sender/: diy.rs  mod.rs  yuque.rs
